syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.wilson.grpc.common.message";
option java_outer_classname = "HelloProto";

package io.wilson.grpc.common.message;

service HelloWorldService {
    // define the interface and data type
    rpc SayHello (HelloRequest) returns (HelloReply) {

    }
}

// define the data type of request
message HelloRequest {
    string name = 1;
}

// define the data type of response
message HelloReply {
    string message = 1;
}